Fixed Page Header and Close Sidebar on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -144,3 +144,14 @@
 .menu li:hover{
     background-color: #ede7e3;
 }
+
+.block-header h2{
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #023047 !important;
+}
+
+.card .header h2{
+    font-weight: bold;
+}
